force-app/main/default/objects/Case/fields/Affected_Product__c.field-meta.xml
<CustomField>
    <fullName>Affected_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>