force-app/main/default/objects/Case/fields/Clinic_Location__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Location__c</fullName>
    <label>Clinic Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>