force-app/main/default/objects/Case/fields/Compliance_Category__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Category__c</fullName>
    <label>Compliance Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
                <default>true</default>
                <label>Operational</label>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>SOC 2</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>