force-app/main/default/objects/Case/fields/Contains_PHI__c.field-meta.xml
<CustomField>
    <fullName>Contains_PHI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks whether a case may contain protected health information.</description>
    <label>Contains PHI</label>
    <type>Checkbox</type>
</CustomField>