force-app/main/default/objects/Case/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>