force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Insurance Authorization</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Patient Support</fullName>
                <default>true</default>
                <label>Patient Support</label>
            </value>
            <value>
                <fullName>Provider Support</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>