force-app/main/default/objects/Case/validationRules/Escalated_Cases_Require_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalated_Cases_Require_Reason</fullName>
    <active>true</active>
    <description>Requires a reason whenever a case is marked as escalated.</description>
    <errorConditionFormula>AND(
    Escalated__c = TRUE,
    ISBLANK(Escalation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Escalation_Reason__c</errorDisplayField>
    <errorMessage>Enter an escalation reason when marking a case as escalated.</errorMessage>
</ValidationRule>